--- a/src/index.css
+++ b/src/index.css
@@ -87,7 +87,7 @@
     display: flex;
     justify-content: space-between;
     padding: 20px 0;
-    border-bottom: 1px solid var(--gray);
+    border-bottom: 1px solid var(--light-gray);
 }
 
 .field:last-of-type {
