--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,19 @@
 .app {
     min-height: 100vh;
 }
+
+.container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.header {
+    width: 100%;
+    padding-top: 50px;
+}
+
+.main {
+    width: 100%;
+    padding: 50px 20px;
+}
